// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> component <Text/> onAnimationEnd callback executed once successfully 1`] = `
<div>
  <span
    class="ta-anim"
  >
    <span
      class=""
    >
      Hello!
    </span>
    <span
      class="ta-cursor ta-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<Text /> component <Text/> renders text passed as children 1`] = `
<div>
  <span
    class="ta-anim"
  >
    <span
      class=""
    >
      Hello!
    </span>
    <span
      class="ta-cursor ta-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<Text /> component <Text/> renders text with deleted characters 1`] = `
<div>
  <span
    class="ta-anim"
  >
    <span
      class=""
    >
      Hello
    </span>
    <span
      class="ta-cursor ta-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<Text /> component <Text/> renders with a line break character 1`] = `
<div>
  <span
    class="ta-anim"
  >
    <span
      class=""
    >
      Line break?
    </span>
    <span
      class="ta-cursor ta-blink"
    >
      |
    </span>
    <br />
  </span>
</div>
`;

exports[`<Text /> component <Text/> with manually triggered start animation 1`] = `
<div>
  <span
    class="ta-anim"
  >
    <span
      class=""
    >
      Yes
    </span>
    <span
      class="ta-cursor ta-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component <TypeMe/> renders without crashing 1`] = `<div />`;
